xi/src/xi/parser/xigParser.java
// Generated from xig.g4 by ANTLR 4.9.2

package xi.parser;
import xi.expinterface.*;
import xi.enums.*;
import xi.operations.*;
import xi.literals.*;
import xi.expandstatements.*;
import java.util.LinkedList;
import java.util.Map;
import java.util.AbstractMap;
import java.util.HashMap;
import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xigParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, MULT=3, DIV=4, MODULO=5, HIGHMULT=6, ASSIGN=7, EO=8, 
		EQ=9, NOTEQ=10, GREATEQ=11, LESSEQ=12, GREAT=13, LESS=14, NOT=15, AND=16, 
		OR=17, INT=18, BOOL=19, TRUE=20, FALSE=21, IF=22, ELSE=23, WHILE=24, RETURN=25, 
		LENGTH=26, PRINT=27, PRINTLN=28, GETCHAR=29, PARSEINT=30, UNPARSEINT=31, 
		READLN=32, COMMENT=33, ID=34, NUMBER=35, MIX=36, USCORE=37, QUOTE=38, 
		SQUOTE=39, LPAREN=40, RPAREN=41, LBRACE=42, RBRACE=43, LBRACKET=44, RBRACKET=45, 
		COLON=46, SCOLON=47, COMMA=48, USE=49, EXT=50, WHITESPACE=51, SPACE=52;
	public static final int
		RULE_parse = 0, RULE_type = 1, RULE_functiondef = 2, RULE_exp = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "type", "functiondef", "exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'>>'", "'='", "'eof'", "'=='", 
			"'!='", "'>='", "'<='", "'>'", "'<'", "'!'", "'&'", "'|'", "'int'", "'bool'", 
			"'true'", "'FALSE'", "'if'", "'else'", "'while'", "'return'", "'length'", 
			"'print'", "'println'", "'getchar'", "'parseint'", "'unparseint'", "'readln'", 
			null, null, null, null, "'_'", "'\"'", "'''", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "':'", "';'", "','", "'use'", "'.ixi'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "MINUS", "MULT", "DIV", "MODULO", "HIGHMULT", "ASSIGN", 
			"EO", "EQ", "NOTEQ", "GREATEQ", "LESSEQ", "GREAT", "LESS", "NOT", "AND", 
			"OR", "INT", "BOOL", "TRUE", "FALSE", "IF", "ELSE", "WHILE", "RETURN", 
			"LENGTH", "PRINT", "PRINTLN", "GETCHAR", "PARSEINT", "UNPARSEINT", "READLN", 
			"COMMENT", "ID", "NUMBER", "MIX", "USCORE", "QUOTE", "SQUOTE", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COLON", "SCOLON", 
			"COMMA", "USE", "EXT", "WHITESPACE", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xig.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xigParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public Map<String, FunctionDef<?>> val = new HashMap<>();
		public Token ID;
		public FunctiondefContext functiondef;
		public TerminalNode USE() { return getToken(xigParser.USE, 0); }
		public TerminalNode ID() { return getToken(xigParser.ID, 0); }
		public TerminalNode EOF() { return getToken(xigParser.EOF, 0); }
		public List<FunctiondefContext> functiondef() {
			return getRuleContexts(FunctiondefContext.class);
		}
		public FunctiondefContext functiondef(int i) {
			return getRuleContext(FunctiondefContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			setState(20);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case USE:
				enterOuterAlt(_localctx, 1);
				{
				setState(8);
				match(USE);
				setState(9);
				((ParseContext)_localctx).ID = match(ID);

				     //BufferedReader file = new BufferedReader(new FileReader("C:/Users/surya/Desktop/xi/test/" + (((ParseContext)_localctx).ID!=null?((ParseContext)_localctx).ID.getText():null) + ".ixi")); 
				     //String line = file.readLine();
				     //while(line != Double.valueOf(2.0))
				     //{
				     //    _localctx.val.put(.);
				     //}
				    
				}
				break;
			case EOF:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(16);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(11);
					((ParseContext)_localctx).functiondef = functiondef();
					_localctx.val.put(((ParseContext)_localctx).functiondef.val.getKey(), ((ParseContext)_localctx).functiondef.val.getValue());
					}
					}
					setState(18);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(19);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(xigParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(xigParser.BOOL, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(xigParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(xigParser.RBRACKET, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(23);
				match(INT);
				}
				break;
			case BOOL:
				{
				setState(24);
				match(BOOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(32);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(27);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(28);
					match(LBRACKET);
					setState(29);
					match(RBRACKET);
					}
					} 
				}
				setState(34);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FunctiondefContext extends ParserRuleContext {
		public Map.Entry<String, FunctionDef<?>> val;
		public List<String> varnames = new LinkedList<>();
		public List<Expression<Void>> block = new LinkedList<>();
		public Token funcname;
		public Token argname;
		public ExpContext statement;
		public ExpContext ret;
		public TerminalNode LPAREN() { return getToken(xigParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(xigParser.RPAREN, 0); }
		public List<TerminalNode> COLON() { return getTokens(xigParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(xigParser.COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(xigParser.LBRACE, 0); }
		public TerminalNode RETURN() { return getToken(xigParser.RETURN, 0); }
		public List<TerminalNode> SCOLON() { return getTokens(xigParser.SCOLON); }
		public TerminalNode SCOLON(int i) {
			return getToken(xigParser.SCOLON, i);
		}
		public TerminalNode RBRACE() { return getToken(xigParser.RBRACE, 0); }
		public List<TerminalNode> ID() { return getTokens(xigParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(xigParser.ID, i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(xigParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xigParser.COMMA, i);
		}
		public FunctiondefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).enterFunctiondef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).exitFunctiondef(this);
		}
	}

	public final FunctiondefContext functiondef() throws RecognitionException {
		FunctiondefContext _localctx = new FunctiondefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functiondef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			((FunctiondefContext)_localctx).funcname = match(ID);
			setState(36);
			match(LPAREN);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(37);
				((FunctiondefContext)_localctx).argname = match(ID);
				setState(38);
				match(COLON);
				setState(39);
				type(0);
				setState(40);
				match(COMMA);
				_localctx.varnames.add((((FunctiondefContext)_localctx).argname!=null?((FunctiondefContext)_localctx).argname.getText():null));
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(RPAREN);
			setState(49);
			match(COLON);
			setState(50);
			type(0);
			setState(51);
			match(LBRACE);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << EO) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << PRINTLN) | (1L << GETCHAR) | (1L << PARSEINT) | (1L << UNPARSEINT) | (1L << READLN) | (1L << COMMENT) | (1L << ID) | (1L << NUMBER) | (1L << QUOTE) | (1L << LPAREN) | (1L << LBRACE))) != 0)) {
				{
				{
				setState(52);
				((FunctiondefContext)_localctx).statement = exp(0);
				setState(53);
				match(SCOLON);
				_localctx.block.add(new TypeChecker<Void>(((FunctiondefContext)_localctx).statement.val, Double.valueOf(2.0)).enforce());
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(RETURN);
			setState(62);
			((FunctiondefContext)_localctx).ret = exp(0);
			setState(63);
			match(SCOLON);
			setState(64);
			match(RBRACE);
			((FunctiondefContext)_localctx).val =  new AbstractMap.SimpleEntry<String, FunctionDef<?>>((((FunctiondefContext)_localctx).funcname!=null?((FunctiondefContext)_localctx).funcname.getText():null), new FunctionDef(_localctx.varnames, new Block(_localctx.block), ((FunctiondefContext)_localctx).ret.val)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public Expression<?> val;
		public List<Expression<?>> expList = new LinkedList<>();
		public List<Expression<Void>> statements = new LinkedList<>();;
		public ExpContext array;
		public ExpContext left;
		public Token ID;
		public ExpContext exp;
		public ExpContext expr;
		public Token NUMBER;
		public Token alpha;
		public ExpContext r;
		public ExpContext rhs;
		public ExpContext guard;
		public ExpContext body;
		public ExpContext condition;
		public ExpContext conseq;
		public ExpContext alt;
		public ExpContext arg;
		public ExpContext right;
		public ExpContext index;
		public ExpContext value;
		public TerminalNode COMMENT() { return getToken(xigParser.COMMENT, 0); }
		public TerminalNode ID() { return getToken(xigParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(xigParser.LPAREN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(xigParser.RPAREN, 0); }
		public TerminalNode MINUS() { return getToken(xigParser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(xigParser.NOT, 0); }
		public TerminalNode NUMBER() { return getToken(xigParser.NUMBER, 0); }
		public TerminalNode TRUE() { return getToken(xigParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(xigParser.FALSE, 0); }
		public TerminalNode LBRACE() { return getToken(xigParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(xigParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(xigParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xigParser.COMMA, i);
		}
		public List<TerminalNode> QUOTE() { return getTokens(xigParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(xigParser.QUOTE, i);
		}
		public TerminalNode MIX() { return getToken(xigParser.MIX, 0); }
		public TerminalNode COLON() { return getToken(xigParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(xigParser.ASSIGN, 0); }
		public List<TerminalNode> SCOLON() { return getTokens(xigParser.SCOLON); }
		public TerminalNode SCOLON(int i) {
			return getToken(xigParser.SCOLON, i);
		}
		public TerminalNode WHILE() { return getToken(xigParser.WHILE, 0); }
		public TerminalNode IF() { return getToken(xigParser.IF, 0); }
		public TerminalNode ELSE() { return getToken(xigParser.ELSE, 0); }
		public TerminalNode PRINT() { return getToken(xigParser.PRINT, 0); }
		public TerminalNode PRINTLN() { return getToken(xigParser.PRINTLN, 0); }
		public TerminalNode GETCHAR() { return getToken(xigParser.GETCHAR, 0); }
		public TerminalNode READLN() { return getToken(xigParser.READLN, 0); }
		public TerminalNode EO() { return getToken(xigParser.EO, 0); }
		public TerminalNode PARSEINT() { return getToken(xigParser.PARSEINT, 0); }
		public TerminalNode UNPARSEINT() { return getToken(xigParser.UNPARSEINT, 0); }
		public TerminalNode MULT() { return getToken(xigParser.MULT, 0); }
		public TerminalNode HIGHMULT() { return getToken(xigParser.HIGHMULT, 0); }
		public TerminalNode DIV() { return getToken(xigParser.DIV, 0); }
		public TerminalNode MODULO() { return getToken(xigParser.MODULO, 0); }
		public TerminalNode PLUS() { return getToken(xigParser.PLUS, 0); }
		public TerminalNode LESS() { return getToken(xigParser.LESS, 0); }
		public TerminalNode LESSEQ() { return getToken(xigParser.LESSEQ, 0); }
		public TerminalNode GREATEQ() { return getToken(xigParser.GREATEQ, 0); }
		public TerminalNode GREAT() { return getToken(xigParser.GREAT, 0); }
		public TerminalNode EQ() { return getToken(xigParser.EQ, 0); }
		public TerminalNode NOTEQ() { return getToken(xigParser.NOTEQ, 0); }
		public TerminalNode AND() { return getToken(xigParser.AND, 0); }
		public TerminalNode OR() { return getToken(xigParser.OR, 0); }
		public TerminalNode LBRACKET() { return getToken(xigParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(xigParser.RBRACKET, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xigListener ) ((xigListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_exp, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(68);
				match(COMMENT);
				}
				break;
			case 2:
				{
				setState(69);
				((ExpContext)_localctx).ID = match(ID);
				((ExpContext)_localctx).val =  new ReadVariable((((ExpContext)_localctx).ID!=null?((ExpContext)_localctx).ID.getText():null));
				}
				break;
			case 3:
				{
				setState(71);
				match(LPAREN);
				setState(72);
				((ExpContext)_localctx).exp = exp(0);
				setState(73);
				match(RPAREN);
				 ((ExpContext)_localctx).val =  ((ExpContext)_localctx).exp.val;
				}
				break;
			case 4:
				{
				setState(76);
				match(MINUS);
				setState(77);
				((ExpContext)_localctx).expr = ((ExpContext)_localctx).exp = exp(36);
				 ((ExpContext)_localctx).val =  new BasicOp(ArithOp.SUBTRACT, new IntegerLiteral(0), new TypeChecker<Integer>(((ExpContext)_localctx).expr.val, Integer.valueOf(0)).enforce()); 
				}
				break;
			case 5:
				{
				setState(80);
				match(NOT);
				setState(81);
				((ExpContext)_localctx).expr = ((ExpContext)_localctx).exp = exp(35);
				 ((ExpContext)_localctx).val =  new NotOp(BoolOp.NOT, new TypeChecker<Boolean>(((ExpContext)_localctx).expr.val, Boolean.valueOf(true)).enforce()); 
				}
				break;
			case 6:
				{
				setState(84);
				((ExpContext)_localctx).NUMBER = match(NUMBER);
				 ((ExpContext)_localctx).val =  new IntegerLiteral(Integer.parseInt((((ExpContext)_localctx).NUMBER!=null?((ExpContext)_localctx).NUMBER.getText():null))); 
				}
				break;
			case 7:
				{
				setState(86);
				match(TRUE);
				 ((ExpContext)_localctx).val =  new BooleanLiteral(true); 
				}
				break;
			case 8:
				{
				setState(88);
				match(FALSE);
				 ((ExpContext)_localctx).val =  new BooleanLiteral(false); 
				}
				break;
			case 9:
				{
				setState(90);
				match(LBRACE);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << EO) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << PRINTLN) | (1L << GETCHAR) | (1L << PARSEINT) | (1L << UNPARSEINT) | (1L << READLN) | (1L << COMMENT) | (1L << ID) | (1L << NUMBER) | (1L << QUOTE) | (1L << LPAREN) | (1L << LBRACE))) != 0)) {
					{
					{
					setState(91);
					((ExpContext)_localctx).exp = exp(0);
					setState(92);
					match(COMMA);
					 _localctx.expList.add(((ExpContext)_localctx).exp.val); 
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(RBRACE);
				 ((ExpContext)_localctx).val =  new ArrayLiteral(_localctx.expList.toArray(new Expression<?>[0])); 
				}
				break;
			case 10:
				{
				setState(102);
				match(QUOTE);
				setState(103);
				((ExpContext)_localctx).alpha = _input.LT(1);
				_la = _input.LA(1);
